<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_nav_graph"
    app:startDestination="@id/recipeListFragment">

    <fragment
        android:id="@+id/recipeListFragment"
        android:name="com.davega.recetasyape.ui.recipelist.RecipeListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_recipe_list" >
        <action
            android:id="@+id/action_recipeListFragment_to_recipeDetailFragment"
            app:destination="@id/recipeDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/recipeDetailFragment"
        android:name="com.davega.recetasyape.ui.recipedetail.RecipeDetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_recipe_detail" >
        <argument
            android:name="idRecipe"
            app:argType="integer"
            android:defaultValue="1" />
        <action
            android:id="@+id/action_recipeDetailFragment_to_mapsFragment"
            app:destination="@id/mapsFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.davega.recetasyape.ui.maps.MapsFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_maps" >
        <argument
            android:name="lat"
            app:argType="string" />
        <argument
            android:name="lng"
            app:argType="string" />
        <argument
            android:name="name"
            app:argType="string" />
    </fragment>
</navigation>